# seal-edge-apdu

./: .gitignore  CMakeLists.txt  README.md  apdu.c  apdu.h  library.json  se050_enums.h  se050_middleware.cpp  se050_middleware.h
T1oI2C/: log.h  phNxpEsePal_i2c.c  phNxpEseProto7816_3.c  phNxpEseProto7816_3.h  phNxpEse_Api.c  phNxpEse_Api.h  phNxpEse_Internal.h
cross-compile/rpizero/: README.md  RaspberryPi.cmake
platform/: i2c.h
platform/esp/: i2c.c  i2c.cpp  reset.c
platform/rpizero/: i2c.c  reset.c
test/: CMakeLists.txt  espTest.cpp  sign_and_hash_test.cpp  test.cpp
